Revert "fix pagination overflow"
This reverts commit 4941baa4779a2a9fae74e31b2bc65fbf34048758.

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -1605,7 +1605,7 @@ nav
 	border-color: #dee2e6;
 }
 .pagination-sm .page-link {
-	padding: 0.25rem min(20px, 2vw);
+	padding: 0.25rem min(20px, 3vw);
     font-size: min(25px, 5.8vw);
 	line-height: 1.5;
 }
